tests/baselines/reference/tsxElementResolution13.errors.txt
file.tsx(1,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== file.tsx (1 errors) ====
    declare module JSX {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    	interface Element { }
    	interface ElementAttributesProperty { pr1: any; pr2: any; }
    }
    
    interface Obj1 {
    	new(n: string): any;
    }
    var obj1: Obj1;
    <obj1 x={10} />; // Error
    